--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,13 +99,6 @@ input, select, textarea {
 	}
 
 	body {
-		/* background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
-
-
 		background-color: #26137a;
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #06ad0e 15%, #061597 85%);
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #06ad0e  15%, #061597 85%);
@@ -3802,6 +3795,14 @@ input, select, textarea {
 #header > ul > li {
 	display: inline;
 	padding: 0 .5em;
+}
 
-	
+.proj-img {
+	width: 100%;
+	height: 45%;
+	object-fit: cover;
+	border: solid 1px #dddddd;
+	display: inline-block;	
+	border-radius: 8px;
+	margin: 0 0 1em 0;
 }
